# mail-signatures

./: .gitignore  README.md  amat_list.csv  ceupv_list.csv  creup_list.csv  dge_list.csv  enem_list.csv  main.py  pyproject.toml  schemas.py  signatures.json
AMAT/: Firma Comunicación.html  Firma Estudios.html  Firma Formativas.html  Firma Lúdicas.html  Firma Presidente.html  Firma Secretario.html  Firma Tesorera.html  README.md  index.html
CEUPV/: CID.html  README.md  VpAK.html
CREUP/: CCAI.html  CCAS.html  CG.html  DIRCOM.html  Presidencia.html  README.md  SCAS.html  SG.html  Secretaría.html  Tesorería.html  VAE.html  VB.html  VCS.html  VDC.html  VDT.html  VF.html  VFCM.html  VGC.html  VICD.html  VIP.html  VIPS.html  VL.html  VLCM.html  VMP.html  VP.html  VPA.html  VPCD.html  VPCIF.html  VPO.html  VPPU.html  VPRI.html  VPU.html  VRI.html  VRINST.html  VRINT.html  VRS.html  VSE.html  VVU.html  index.html
DEFC/: Firma Académico.html  Firma Actividades.html  Firma Asesor.html  Firma Comunicación.html  Firma Delegada.html  Firma Extensión.html  Firma Garantías.html  Firma Secretaria.html  Firma Subdelegado.html  Firma Subsecretario.html  Firma Subtesorero.html  Firma Tesorero.html  Firma Transparencia.html  README.md  index.html
DGE/: Firma Académico.html  Firma Alba.html  Firma Coordinador.html  Firma DirGab.html  Firma Ejecutivo.html  Firma Extensión.html  Firma Genérica.html  Firma Igualdad.html  Firma Inclusión.html  Firma Salud.html  Firma Secretaria.html  Firma Tesorera.html  Firma Vicesecretario.html  README.md
ENEM/: Firma Actividades.html  Firma Diseño.html  (+28 more)
(+8 files in other folders)
