[project]
name = "mail-signatures"
version = "2.0.0"
description = "Script para generar firmas de correo electrónico"
authors = [{name = "Iván Salido Cobo"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.5",
    "schema>=0.7.7",
]

[project.scripts]
mail-signatures = "main:main"
